# cpp_snake_game

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp
